podcasting, mix feedback price changes

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ layout: splash-home
     <h1 class="hidden-lg hidden-xl" style="font-size: 200%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #333; padding-top: 10%; text-transform: uppercase;">Not just a master</h1>
 
           <p style=" font-family: 'Lato'; font-size: 160%; margin: 0px; color: #fff; font-weight: 400; text-shadow: 0px 0px 20px #333;" >
-            But a working relationship with a professional mastering engineer.</p>
+            But a working relationship with a professional audio engineer.</p>
             <p style=" font-family: 'Lato'; font-size: 119%; margin: 0px; color: #fff; font-weight: 400; text-shadow: 0px 0px 20px #333;" >
             <br> <br>
-            While we launch, discover how your mixes can sound at their full potential with a free master from your own personal mastering engineer.  
-          <br>Enter your email below, and your engineer will
-            reach out to you to get started on your first song, free of charge.<br>
+            While we launch, discover how your audio can sound at its full potential with a free master, mix feedback, or podcast master from your own mastering engineer. 
+
+          <br>Enter your email below, and your engineer will reach out to you to get started on your first project, free of charge.<br>
 <br>
 </p>
 
@@ -97,7 +97,7 @@ layout: splash-home
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 16px;">
-  Get Mastered is an audio improvement and mastering service run by professional mastering engineers, and the only service of its kind that provides musicians and engineers of all levels a chance to grow their production skills through Mix Feedback. Below is just one example of the difference we can make to your music through our collaborative mastering process:
+  Get Mastered is an audio improvement and mastering service run by professional mastering engineers, and is the only service of its kind that provides musicians, engineers, and podcasters of all levels a chance to grow their production skills through mix and recording feedback. Below is just one example of the difference we can make to your audio through our collaborative mastering process:
 
 
 </p>
@@ -175,11 +175,9 @@ function audioPlayPause(){
 
 <div class="row-fluid">
 <p style="font-size: 16px;">
-
-    <b>
-  Our mastering engineers strive to make your audio the absolute best it can be, <a href="#rates">at rates that are the absolute best value for your dollar.</a>
+  Our mastering engineers strive to bring your audio to a professional level, <a href="#rates">at rates that are the absolute best value for your dollar.</a><b> We offer assistance at the recording, mixing, and mastering stages to improve both your audio quality and your own production skills.
 </b>
-  Just read <a href="#reviews">reviews from our happy customers</a>, listen to some more <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="#free">your first song free!</a>
+  Just read <a href="#reviews">reviews from our happy customers</a>, listen to some more <a target="_blank" href="/examples/">examples of our work</a> and get started today with <a href="#free">your first project free!</a>
   <br>
   <br>
   Learn more about Get Mastered, our engineers, and our vision, by clicking <a href="/blog/about/What-Is-Get-Mastered/">here</a>, or keep scrolling to see our services and rates.
@@ -197,6 +195,7 @@ function audioPlayPause(){
 {% include rates.html %}
 <div class="col-xs-12"></div>
 {% include rates-services.html %}
+{% include rates-podcasts.html %}
 
 
 
