--- a/payment/calculators/podcasts/index.html
+++ b/payment/calculators/podcasts/index.html
@@ -1,25 +1,19 @@
 ---
-title: Payment
+title: Payment Podcast
 layout: splash
 ---
 
-
+<!--
 <section id="payment" align="center">
 
 <div class="col-lg-12 bg-white" style="padding: 120px 10% 120px 10%; margin: 0px;">
 
-
-<!-- <link rel="stylesheet" href="https://embed.calculoid.com/styles/main.css" />
-<script src="https://embed.calculoid.com/scripts/combined.min.js"></script>
-<div ng-app="calculoid" ng-controller="CalculoidMainCtrl" ng-init="init({calcId:10445,apiKey:'56f2cacd6fbd1'})" ng-include="load()"></div>
- -->
-
 <div class="row">
 	<div class="col-xs-12">
-		<h1>Our price calculator</h1>
+		<h1>Our podcast mastering price calculator</h1>
 
 
-<p style="color: #333;">Enter the number of songs in your project in the field below to instantly calculate the price of your project.
+<p style="color: #333;">Enter the length of your audio (in minutes, rounding down to the nearest minute) in the field below to instantly calculate the price of your project.
     <br>
     <br>
 </p>
@@ -98,7 +92,6 @@ function priceCalc() {
 }
 </script>
 
-<!-- 		<a class="btn btn-skin" style="width: 100%; height: 50px; font-size: 18px; padding-top: 10px;" href="/payment/master-1/">Purchase</a> -->
 	</div>
 </div>
 
@@ -108,3 +101,6 @@ function priceCalc() {
 </div>
 
 </section>
+
+-->
+<div style="padding: 130px;"><center><h3>Hang tight! Podcast mastering is coming soon.</h3></center></div>
