--- a/payment/mix-feedback/index.html
+++ b/payment/mix-feedback/index.html
@@ -5,8 +5,7 @@ layout: splash
 
 <div class="col-6-xs" style="padding: 12%;">
 	<h1 align="center">Checkout - {{page.title}}</h1>
-	<p align="center">Mix Feedbacks are only available for <a href="/#memberships">members</a>. And remember, if you are spending a lot on extra Mix Feedback, you can always <a href="/#memberships">upgrade your plan.</a>
-		<br>
+	<p align="center">
 			After you click 'Purchase', you will be redirected to our submission page, where you can submit your mix for feedback.</p>
 
 <script type='text/javascript' src="https://www.paywhirl.com/js/widget.js"></script>
