--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@ layout: splash-home
     <h1 class="hidden-lg hidden-xl" style="font-size: 200%; color: #fff; text-align: center; text-shadow: 0px 0px 20px #333; padding-top: 10%; text-transform: uppercase;">Not just a master</h1>
 
           <p style=" font-family: 'Lato'; font-size: 160%; margin: 0px; color: #fff; font-weight: 400; text-shadow: 0px 0px 20px #333;" >
-            But a working relationship with a professional audio engineer.</p>
+            But a working relationship with a professional mastering engineer.</p>
             <p style=" font-family: 'Lato'; font-size: 119%; margin: 0px; color: #fff; font-weight: 400; text-shadow: 0px 0px 20px #333;" >
             <br> <br>
-            While we launch, discover how your audio can sound at its full potential with a free master, mix feedback, or podcast master from your own mastering engineer. 
+            While we launch, discover how your audio can sound at its best with a free master, mix feedback, or podcast master from your own mastering engineer. 
 
           <br>Enter your email below, and your engineer will reach out to you to get started on your first project, free of charge.<br>
 <br>
@@ -97,7 +97,7 @@ layout: splash-home
   <h1>What is Get Mastered?</h1>
 
 <p style="font-size: 16px;">
-  Get Mastered is an audio improvement and mastering service run by professional mastering engineers, and is the only service of its kind that provides musicians, engineers, and podcasters of all levels a chance to grow their production skills through mix and recording feedback. Below is just one example of the difference we can make to your audio through our collaborative mastering process:
+  Get Mastered is an audio consultation and mastering service run by professional mastering engineers. We are the only professional service that provides musicians, engineers, and podcasters of all levels a chance to grow their own production skills through personalized mix feedback and recording assistance. Below is just one example of the difference we can make to your audio through our collaborative mastering process:
 
 
 </p>
