--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ layout: splash-home
 
 
 
-                <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
+                <form id="contact-form" method="POST" action="https://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
                     <div class="col-md-5 col-md-offset-3">
                         <div class="form-group">
