no coupon clippers

--- a/payment/calculators/mastering/index.html
+++ b/payment/calculators/mastering/index.html
@@ -39,7 +39,7 @@ layout: splash
 <br>
 
 <br>
-<p style="color: #333;"><i>(Here's another hint for the coupon clippers out there: follow us on <a target="_blank" href="https://www.facebook.com/getmastered">Facebook</a>, <a target="_blank" href="https://www.instagram.com/getmastereddeals/">Instagram</a>, and <a target="_blank" href="https://twitter.com/getmastered">Twitter</a> for regular coupon codes to get an even better discount on your project!)</i><br></p>
+<!-- <p style="color: #333;"><i>(Here's another hint for the coupon clippers out there: follow us on <a target="_blank" href="https://www.facebook.com/getmastered">Facebook</a>, <a target="_blank" href="https://www.instagram.com/getmastereddeals/">Instagram</a>, and <a target="_blank" href="https://twitter.com/getmastered">Twitter</a> for regular coupon codes to get an even better discount on your project!)</i><br></p> -->
 
 <script>
 function priceCalc() {
