language tweaks on services pages

--- a/services/index.html
+++ b/services/index.html
@@ -8,6 +8,6 @@ layout: splash-services
 {% include rates-mastering.html %}
 <div class="col-xs-12"></div>
 {% include rates-mix-feedback.html %}
-{% include audio-cleanup.html %}
+{% include rates-audio-cleanup.html %}
 
 </section>
