--- a/submit/mastering/index.html
+++ b/submit/mastering/index.html
@@ -9,7 +9,7 @@ layout: splash
 <div class="col-lg-12 bg-white" style="padding: 120px 10% 0px 10%; margin: 0px;">
 
 <div class="row-fluid">
-<h4 style="color: #aaa;">Mastering Submissions - <a href="/submit/mix-feedback/">Mix Feedback Submissions</a> - <a href="/submit/podcast-mastering/">Podcast Mastering Submissions</a></h4>
+<h4 style="color: #aaa;">Mastering Submissions - <a href="/submit/mix-feedback/">Mix Feedback Submissions</a> - <a href="/submit/podcast-mastering/">Audio Cleanup Submissions</a></h4>
 <br>
 </div>
 
@@ -38,7 +38,7 @@ layout: splash
     </p>
 
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
+                <form id="contact-form" method="POST" action="https://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
