tracking code back up?

--- a/submit/mix-feedback/index.html
+++ b/submit/mix-feedback/index.html
@@ -16,7 +16,7 @@ layout: splash
 
 <div class="row-fluid">
 
-<h3 style="font-size: 200%; color: #000; text-align: center;">Send your engineer your mix for feedback using the form below:</h3>
+<h3 style="font-size: 200%; color: #000; text-align: center;">Send us your mix for feedback using the form below:</h3>
 
 <div class="hidden-sm hidden-xs hidden-md" style="margin-bottom: 30px; padding: 0px;">
         <iframe src="https://www.wetransfer.com/?to=services@getmastered.com" height="400px" width="80%"></iframe>
