thank you 2 page for file submission thanks

--- a/submit/mastering/index.html
+++ b/submit/mastering/index.html
@@ -33,7 +33,7 @@ layout: submissions
 {% include upload-widget-cloudwok.html %}
             </div> -->
 
-          <p style="font-size: 20px;"><b>Having issues? On mobile? Have another query?</b> Reach out to us using the form below:
+ <!--          <p style="font-size: 20px;"><b>Having issues? On mobile? Have another query?</b> Reach out to us using the form below:
       <br>
     </p>
 
@@ -76,9 +76,9 @@ layout: submissions
                 </div>
                 </form>
             </div>
-            <br><br>
+            <br><br> -->
 
-            <p>You can also send any questions and concerns directly to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
+            <p>You can send any questions and concerns directly to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
 
 
 </div>
