file upload form colors

--- a/submit/mastering/index.html
+++ b/submit/mastering/index.html
@@ -17,11 +17,13 @@ layout: submissions
 <div class="row-fluid">
 
 
-<h1 style="font-size: 200%; color: #000; text-align: center;">Three steps to get the best master possible:</h1>
+<h1 style="font-size: 200%; color: #000; text-align: center;">Send us your mix for mastering using the form below:</h1>
+
+<p>If possible, please send us lossless files only (.wav, .flac, or .ogg). If you only have an .mp3 version, we can work with those too. At least 3-6 dB headroom on your mix is also appreciated - this allows us to add volume without sacrificing dynamics.</p>
 
 
 
-          <img src="/img/submissions/Submission-Guidelines-master.png">
+          <!-- <img src="/img/submissions/Submission-Guidelines-master.png"> -->
 
 
 <div style="margin-bottom: 30px; padding: 0px;">
