new example page

--- a/examples/index.html
+++ b/examples/index.html
@@ -21,7 +21,7 @@ layout: splash
 
 	</div>
 
-<div class="col-lg-6" style="text-align: center; padding: 0px;">
+<div class="col-lg-4" style="text-align: center; padding: 0px;">
                       <div class="row-fluid example-div example-1">
 
 <h3>
@@ -73,6 +73,10 @@ layout: splash
 
 </div>
 
+</div>
+
+<div class="col-lg-4" style="text-align: center; padding: 0px;">
+
 <div class="row-fluid example-div example-3">
 
 
@@ -101,10 +105,8 @@ layout: splash
 
 
 </div>
-          </div>
+          
 
-
-<div class="col-lg-6 bg-white" style="padding: 0px; text-align: center;">
                       <div class="row-fluid example-div example-4">
 
 
@@ -129,6 +131,10 @@ layout: splash
   <button class="btn btn-skin" id="toggle4" type="btn btn-skin" onclick="audioToggle(4)" style="visibility: hidden;">Toggle Before/After</button>
 
 </div>
+
+</div>
+
+<div class="col-lg-4 bg-white" style="padding: 0px; text-align: center;">
 
 <div class="row-fluid example-div example-5">
 
@@ -191,13 +197,15 @@ layout: splash
 <div class="col-lg-12 example-page-bottom" style="padding: 5%; margin: 0px;">
 <div class="row" style="padding: 0px; text-align: center;">
 
-<h1 style="text-align: center; font-size: 300%;">Want even more?
+<h1 style="text-align: center;">Want even more?
 	</h1>
 
 	<br>
 
-	<a target="_blank" href="http://www.soundcloud.com/getmastered" style="text-align: center; font-size: 500%;">Check out our soundcloud
+<h1>
+	<a target="_blank" href="http://www.soundcloud.com/getmastered" style="text-align: center;">Check out our soundcloud
 	</a>
+  </h1>
 
 	<br>
 
