--- a/submit/mastering/index.html
+++ b/submit/mastering/index.html
@@ -8,10 +8,10 @@ layout: submissions
 
 <div class="col-lg-12 bg-white" style="padding: 120px 10% 0px 10%; margin: 0px;">
 
-<div class="row-fluid">
+<!-- <div class="row-fluid">
 <h4 style="color: #aaa;">Mastering Submissions - <a href="/submit/mix-feedback/">Mix Feedback Submissions</a></h4>
 <br>
-</div>
+</div> -->
 
 
 <div class="row-fluid">
