All on landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@ layout: splash-home
  <!--  <div class="wow fadeInUp" data-wow-delay="1.4s"> -->
 
 {% include landing-page.html %}
-{% include offer.html %}
+{% include rates-mastering.html %}
+{% include reviews.html %}
 
   <!-- </div> -->
 
