headshots on landing page

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@ layout: splash-home
  <!--  <div class="wow fadeInUp" data-wow-delay="1.4s"> -->
 
 {% include landing-page.html %}
+<div class="row main-divider"></div>
 {% include rates-mastering.html %}
+<div class="row main-divider"></div>
 {% include reviews.html %}
 
   <!-- </div> -->
