lots of small style updates

--- a/contact/index.html
+++ b/contact/index.html
@@ -12,14 +12,14 @@ layout: splash
 <h1 style="font-size: 400%; color: #000; text-align: center;">Contact Us</h1>
 <br>
 
-          <p>Reach out to us with some details about your project using the form below, and we will respond as soon as possible:
+          <p>Reach out to us using the form below, and we will respond as soon as possible:
       <br>
     </p>
 
             <div class="boxed-grey">
                 <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-12">
                         <div class="form-group">
                             <label for="email">
                                 Email Address</label>
@@ -34,12 +34,10 @@ layout: splash
                             <select id="subject" name="subject" class="form-control" required="required">
                                 <option value="na" selected="">Choose One:</option>
                                 <option value="Get Mastered: Submission">Mastering</option>
-                                <option value="Get Mastered: Other">Mix Feedback</option>
                                 <option value="Get Mastered: Other">Other</option>
                             </select>
                         </div>
-                    </div>
-                    <div class="col-md-6">
+                    
                         <div class="form-group">
                             <label for="name">
                                 Message</label>
@@ -57,7 +55,7 @@ layout: splash
             </div>
             <br><br>
 
-            <p>You can also send your files, questions, and concerns directly to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
+            <p>You can also send your questions and concerns directly to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
             <br>
             <br>
 
