--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@ layout: splash-home
 {% include rates-mastering.html %}
 <div class="row main-divider"></div>
 {% include reviews.html %}
+<div class="row main-divider"></div>
+{% include faq.html %}
 
   <!-- </div> -->
 
