button bug fix, faq additions

--- a/our-work/index.html
+++ b/our-work/index.html
@@ -21,7 +21,8 @@ layout: splash
   			</a>
   		</h3>
 		<p>Our mastering engineers worked with Tuxis Giant and Traded for their split EP</p>
-		<iframe style="border: 0; width: 400px; height: 274px;" src="https://bandcamp.com/EmbeddedPlayer/album=1331763745/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="http://tuxisgiant.bandcamp.com/album/tuxis-giant-traded-split">Tuxis Giant/Traded Split by Tuxis Giant</a></iframe>
+		<iframe class="hidden-xs hidden-sm" style="border: 0; width: 400px; height: 274px;" src="https://bandcamp.com/EmbeddedPlayer/album=1331763745/size=large/bgcol=ffffff/linkcol=0687f5/artwork=small/transparent=true/" seamless><a href="http://tuxisgiant.bandcamp.com/album/tuxis-giant-traded-split">Tuxis Giant/Traded Split by Tuxis Giant</a></iframe>
+		<iframe class="hidden-lg hidden-md hidden-xl" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1331763745/size=small/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://tuxisgiant.bandcamp.com/album/tuxis-giant-traded-split">Tuxis Giant/Traded Split by Tuxis Giant</a></iframe>
 		<br><br>
 		<p>
 			<i>
@@ -40,12 +41,13 @@ layout: splash
 
   	<div class="our-work-div">
   		<h3>
-  			<a href="" target="_blank">
+  			<a href="https://origin-x1.bandcamp.com/" target="_blank">
   				Origin X Single
   			</a>
   		</h3>
 		<p>Our mastering engineers worked with Origin-X their single "Death is Coming"</p>
-		<iframe style="border: 0; width: 400px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1800729095/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://origin-x1.bandcamp.com/album/death-is-coming">Death Is Coming by Fear Is The Liar featuring Origin-X</a></iframe>
+		<iframe class="hidden-sm hidden-xs" style="border: 0; width: 400px; height: 120px;" src="https://bandcamp.com/EmbeddedPlayer/album=1800729095/size=large/bgcol=ffffff/linkcol=63b2cc/tracklist=false/artwork=small/transparent=true/" seamless><a href="http://origin-x1.bandcamp.com/album/death-is-coming">Death Is Coming by Fear Is The Liar featuring Origin-X</a></iframe>
+		<iframe class="hidden-lg hidden-md hidden-xl" style="border: 0; width: 100%; height: 42px;" src="https://bandcamp.com/EmbeddedPlayer/album=1800729095/size=small/bgcol=ffffff/linkcol=63b2cc/transparent=true/" seamless><a href="http://origin-x1.bandcamp.com/album/death-is-coming">Death Is Coming by Fear Is The Liar featuring Origin-X</a></iframe>
 		<br><br>
 		<p>
 			<i>
@@ -55,19 +57,20 @@ layout: splash
 		</p>
   	</div>
 
-
-
+  	<!-- Courage -->
 
   	<div class="our-work-div">
 		<h3>Soundtrack for Courage</h3>
 		<p>Our mastering engineer Lee Schuna composed the original soundtrack and sound design elements in 7 days for Courage, an award winning short film from Campus Music Fest 2016</p>
-		<iframe width="560" height="315" src="https://www.youtube.com/embed/dp8nZDq89UE" frameborder="0" allowfullscreen></iframe>
+		<iframe width="70%" height="315" src="https://www.youtube.com/embed/dp8nZDq89UE" frameborder="0" allowfullscreen></iframe>
 	</div>
+
+	<!-- Heidi Chronicles -->
 
 	<div class="our-work-div">
   		<h3>Soundtrack for The Heidi Chronicles</h3>
 		<p>Our mastering engineer Lee Schuna composed the original music for The Heidi Chronicles</p>
-		<iframe width="50%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/197534160&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+		<iframe width="70%" height="450" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/197534160&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
   	</div>
   
   </div>
