--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: splash-home
 ---
 
 
-<section id="free" align="center">
+<section id="home" align="center">
  <!--  <div class="wow fadeInUp" data-wow-delay="1.4s"> -->
 
 {% include landing-page.html %}
