Removed Paywhirl Payment pages

--- a/contact/index.html
+++ b/contact/index.html
@@ -17,7 +17,7 @@ layout: splash
     </p>
 
             <div class="boxed-grey">
-                <form id="contact-form" method="POST" action="http://formspree.io/keenan.hye@getmastered.com">
+                <form id="contact-form" method="POST" action="https://formspree.io/keenan.hye@getmastered.com">
                 <div class="row">
                     <div class="col-md-12">
                         <div class="form-group">
@@ -55,7 +55,7 @@ layout: splash
             </div>
             <br><br>
 
-            <p>You can also send your questions and concerns directly to <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
+            <p>You can also contact us directly at <a href="mailto:services@getmastered.com">services@getmastered.com</a></p>
             <br>
             <br>
 
